; ModuleID = '/home/carl/AnghaBench/systemd/src/timedate/extr_timedatectl.c_show_properties.c'
source_filename = "/home/carl/AnghaBench/systemd/src/timedate/extr_timedatectl.c_show_properties.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [26 x i8] c"org.freedesktop.timedate1\00", align 1
@.str.1 = private unnamed_addr constant [27 x i8] c"/org/freedesktop/timedate1\00", align 1
@arg_property = common dso_local global i32 0, align 4
@arg_value = common dso_local global i32 0, align 4
@arg_all = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8**, i8*)* @show_properties to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @show_properties(i32 %0, i8** %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8**, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i8** %1, i8*** %6, align 8
  store i8* %2, i8** %7, align 8
  %10 = load i8*, i8** %7, align 8
  %11 = bitcast i8* %10 to i32*
  store i32* %11, i32** %8, align 8
  %12 = load i32*, i32** %8, align 8
  %13 = call i32 @assert(i32* %12)
  %14 = load i32*, i32** %8, align 8
  %15 = load i32, i32* @arg_property, align 4
  %16 = load i32, i32* @arg_value, align 4
  %17 = load i32, i32* @arg_all, align 4
  %18 = call i32 @bus_print_all_properties(i32* %14, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str.1, i64 0, i64 0), i32* null, i32 %15, i32 %16, i32 %17, i32* null)
  store i32 %18, i32* %9, align 4
  %19 = load i32, i32* %9, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %24

21:                                               ; preds = %3
  %22 = load i32, i32* %9, align 4
  %23 = call i32 @bus_log_parse_error(i32 %22)
  store i32 %23, i32* %4, align 4
  br label %25

24:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %25

25:                                               ; preds = %24, %21
  %26 = load i32, i32* %4, align 4
  ret i32 %26
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @bus_print_all_properties(i32*, i8*, i8*, i32*, i32, i32, i32, i32*) #1

declare dso_local i32 @bus_log_parse_error(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
